--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,29 @@
 * {
     font-family: 'Libre Franklin';
 }
+html {
+    font-size: 10px;
+}
+
+
+h1{
+    font-size: 4.5rem;
+}
+
+h2 {
+    font-size: 3.5rem;
+}
+
+h4 {
+    font-size: 1.6rem;
+}
+
+h5 {
+    font-size: 1.4rem;
+}
+
+p,
+a,
+div {
+    font-size: 1.2rem;
+}
