--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,23 +7,44 @@ html {
 
 
 h1{
-    font-size: 4.5rem;
+    font-size: 3.2rem;
+
+    @include lg {
+        font-size: 4.5rem;
+    }
 }
 
 h2 {
-    font-size: 3.5rem;
+    font-size: 2.8rem;
+    
+    @include lg {
+        font-size: 3.5rem;
+    }
+}
+
+h3 {
+    font-size: 2rem;
+    
+    @include lg {
+        font-size: 2.4rem;
+    }
 }
 
 h4 {
     font-size: 1.6rem;
 }
 
-h5 {
+h5,
+p {
     font-size: 1.4rem;
 }
 
-p,
-a,
-div {
+a {
     font-size: 1.2rem;
+}
+
+svg {
+    width: 100%;
+    height: 100%;
+    transition: $base-transition;
 }
