--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@ html {
 h1{
     font-size: 3.2rem;
 
-    @include lg {
+    @include md {
         font-size: 4.5rem;
     }
 }
@@ -17,7 +17,7 @@ h1{
 h2 {
     font-size: 2.8rem;
     
-    @include lg {
+    @include md {
         font-size: 3.5rem;
     }
 }
@@ -25,7 +25,7 @@ h2 {
 h3 {
     font-size: 2rem;
     
-    @include lg {
+    @include md {
         font-size: 2.4rem;
     }
 }
@@ -40,12 +40,7 @@ p {
 }
 
 a,
-button {
+button,
+input {
     font-size: 1.2rem;
-}
-
-svg {
-    width: 100%;
-    height: 100%;
-    transition: $base-transition;
 }
